compositions/awsecstarget/templates/render-target-resources/20-ecs.yaml
apiVersion: ecs.aws.m.upbound.io/v1beta1
kind: Service
metadata:
  name: <<$xrName>>-service
  annotations:
    <<setResourceNameAnnotation "ecs-service">>
    crossplane.io/external-name: <<$family>>
spec:
  managementPolicies: ["Observe", "Create", "Delete", "LateInitialize"]
  providerConfigRef:
    kind: ClusterProviderConfig
    name: default
  forProvider:
    region: <<$region>>
    clusterRef:
      name: <<$xrName>>-cluster
    taskDefinitionRef:
      name: <<$xrName>>-taskdef
    launchType: FARGATE
    platformVersion: LATEST
    desiredCount: <<$desired | int>>
    waitForSteadyState: false
    forceDelete: true
    networkConfiguration:
      assignPublicIp: true
      <<- if eq $networkMode "create" >>
      subnetRefs:
        - name: <<$xrName>>-subnet
      securityGroupRefs:
        - name: <<$xrName>>-sg
      <<- else >>
      subnets:
        <<- range $network.subnetIds >>
        - <<. | quote>>
        <<- end >>
      securityGroups:
        <<- range $network.securityGroupIds >>
        - <<. | quote>>
        <<- end >>
      <<- end >>
    tags:
      <<- range $k, $v := $tags >>
      <<$k>>: <<$v | quote>>
      <<- end >>
