compositions/awsecstarget/templates/render-target-resources/10-network.yaml
apiVersion: ec2.aws.m.upbound.io/v1beta1
kind: Route
metadata:
  name: <<$xrName>>-default-route
  annotations:
    <<setResourceNameAnnotation "route">>
spec:
  providerConfigRef:
    kind: ClusterProviderConfig
    name: default
  forProvider:
    region: <<$region>>
    destinationCidrBlock: 0.0.0.0/0
    routeTableIdRef:
      name: <<$xrName>>-rt
    gatewayIdRef:
      name: <<$xrName>>-igw
